--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-
 <html class="dark" lang="fr"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Tableau de bord principal</title>
+<title>Tableau de bord (NIRD/Obsolescence/Big Tech)</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
 <script id="tailwind-config">
       tailwind.config = {
@@ -13,141 +12,174 @@
         theme: {
           extend: {
             colors: {
-              "primary": "#13ec37",
-              "background-light": "#f6f8f6",
-              "background-dark": "#102213",
+              "primary": "#E53E3E",
+              "secondary": "#38A169",
+              "warning": "#D69E2E",
+              "background-light": "#1A202C", // Force dark mode
+              "background-dark": "#10141a",
+              "surface": "#1a202c",
+              "accent-red": "#E53E3E",
+              "accent-green": "#48BB78",
+              "accent-yellow": "#F6E05E",
+              "text-primary": "#E2E8F0",
+              "text-secondary": "#A0AEC0",
+              "border-color": "#2D3748"
             },
             fontFamily: {
-              "display": ["Lexend", "sans-serif"]
+              "display": ["Roboto Mono", "monospace"]
             },
-            borderRadius: {"DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px"},
+            borderRadius: {"DEFAULT": "0.125rem", "lg": "0.25rem", "xl": "0.5rem", "full": "9999px"},
           },
         },
       }
     </script>
-<style>
-        .material-symbols-outlined {
-            font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
-            vertical-align: middle;
-        }
-    </style>
+<style>.material-symbols-outlined {
+    font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 24;
+    vertical-align: middle
+    }
+    .dark .main-bg {
+    background-color: #0d1117;
+    background-image:
+        radial-gradient(circle at 1px 1px, #2d3748 1px, transparent 0),
+        radial-gradient(circle at 10px 10px, #2d3748 1px, transparent 0);
+    background-size: 20px 20px;
+    }
+    .scanlines {
+      position: relative;
+    }
+    .scanlines::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      background:
+          linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%),
+          linear-gradient(90deg, rgba(255, 0, 0, 0.03), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.03));
+      background-size: 100% 3px, 5px 100%;
+      animation: flicker 0.15s infinite;
+      z-index: 2;
+    }
+    @keyframes flicker {
+      0% { opacity: 0.2; }
+      20% { opacity: 0.6; }
+      40% { opacity: 0.3; }
+      60% { opacity: 0.7; }
+      80% { opacity: 0.25; }
+      100% { opacity: 0.4; }
+    }
+    .glitch-text {
+        text-shadow: 0.05em 0 0 #ff0000, -0.025em -0.05em 0 #00ff00, 0.025em 0.05em 0 #0000ff;
+    }
+</style>
 </head>
-<body class="bg-background-light dark:bg-background-dark font-display text-gray-800 dark:text-gray-200">
+<body class="bg-background-dark font-display text-text-primary">
 <div class="flex h-screen w-full">
-<!-- SideNavBar -->
-<aside class="flex w-64 flex-col bg-background-light dark:bg-background-dark border-r border-gray-200 dark:border-gray-800 p-4">
+<aside class="flex w-64 flex-col bg-background-dark border-r border-border-color p-4">
 <div class="flex flex-col gap-4">
 <div class="flex items-center gap-3">
-<div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10" data-alt="School logo with a digital theme" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAMOs-ClyjS6WTQsBzOZu91yPuAEdQnYJkLFfaNHDtlHRDDw2jS2iUWfd7j0vvdY99M3SCUlsTBFKOHidltSkKmKz13m3G-bj8GbQL16uAXUfdxnmlM1DMOsG2E2SRqhtY-yHu0hk6SGqWvtKOBRk6lQCtPRMsMQvNh3lNR07zHQnzcBfFT1SBFpl8bG_XnaeV7i36dux80md48PPYulzkwOBVg_NiKdZ0B15IiCuow_3ec8iubWnaJQHfkz5wUcn5tw83rcEJp5H1-");'></div>
+<div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10 border-2 border-border-color" data-alt="School logo with a digital theme" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAMOs-ClyjS6WTQsBzOZu91yPuAEdQnYJkLFfaNHDtlHRDDw2jS2iUWfd7j0vvdY99M3SCUlsTBFKOHidltSkKmKz13m3G-bj8GbQL16uAXUfdxnmlM1DMOsG2E2SRqhtY-yHu0hk6SGqWvtKOBRk6lQCtPRMsMQvNh3lNR07zHQnzcBfFT1SBFpl8bG_XnaeV7i36dux80md48PPYulzkwOBVg_NiKdZ0B15IiCuow_3ec8iubWnaJQHfkz5wUcn5tw83rcEJp5H1-");'></div>
 <div class="flex flex-col">
-<h1 class="text-gray-900 dark:text-white text-base font-medium leading-normal">Lycée Numérique</h1>
-<p class="text-gray-500 dark:text-gray-400 text-sm font-normal leading-normal">Tableau de Bord</p>
+<h1 class="text-text-primary text-base font-medium leading-normal">Lycée Numérique</h1>
+<p class="text-text-secondary text-sm font-normal leading-normal">// Tableau de Bord</p>
 </div>
 </div>
 <nav class="flex flex-col gap-2 mt-4">
-<a class="flex items-center gap-3 px-3 py-2 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg" href="#">
-<span class="material-symbols-outlined text-2xl">domain</span>
+<a class="flex items-center gap-3 px-3 py-2 text-text-secondary hover:bg-surface hover:text-text-primary rounded" href="#">
+<span class="material-symbols-outlined text-xl">domain</span>
 <p class="text-sm font-medium leading-normal">Départements</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-gray-900 dark:text-white rounded-lg bg-primary/20 dark:bg-primary/20" href="#">
-<span class="material-symbols-outlined text-2xl !font-bold">router</span>
+<a class="flex items-center gap-3 px-3 py-2 text-accent-green bg-accent-green/10 rounded" href="#">
+<span class="material-symbols-outlined text-xl !font-bold">router</span>
 <p class="text-sm font-medium leading-normal">Infrastructure Réseau</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg" href="#">
-<span class="material-symbols-outlined text-2xl">shopping_cart</span>
-<p class="text-sm font-medium leading-normal">Achats de Matériel</p>
+<a class="flex items-center gap-3 px-3 py-2 text-text-secondary hover:bg-surface hover:text-text-primary rounded" href="#">
+<span class="material-symbols-outlined text-xl">shopping_cart</span>
+<p class="text-sm font-medium leading-normal">Acquisition Matériel</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg" href="#">
-<span class="material-symbols-outlined text-2xl">groups</span>
+<a class="flex items-center gap-3 px-3 py-2 text-text-secondary hover:bg-surface hover:text-text-primary rounded" href="#">
+<span class="material-symbols-outlined text-xl">groups</span>
 <p class="text-sm font-medium leading-normal">Personnel</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 rounded-lg" href="#">
-<span class="material-symbols-outlined text-2xl">science</span>
+<a class="flex items-center gap-3 px-3 py-2 text-text-secondary hover:bg-surface hover:text-text-primary rounded" href="#">
+<span class="material-symbols-outlined text-xl">science</span>
 <p class="text-sm font-medium leading-normal">R&amp;D</p>
 </a>
 </nav>
 </div>
 <div class="mt-auto">
-<!-- Spacer -->
 </div>
 </aside>
-<!-- Main Content -->
-<main class="flex-1 flex flex-col h-screen">
-<!-- Header Bar -->
-<header class="flex items-center justify-between p-4 border-b border-gray-200 dark:border-gray-800 bg-background-light dark:bg-background-dark">
-<!-- Stats -->
+<main class="flex-1 flex flex-col h-screen bg-surface dark:main-bg">
+<header class="flex items-center justify-between p-4 border-b border-border-color bg-background-dark/80 backdrop-blur-sm">
 <div class="flex flex-wrap gap-4">
-<div class="flex items-center gap-3 min-w-[158px] rounded-lg p-3 border border-gray-200 dark:border-gray-800">
-<span class="material-symbols-outlined text-primary text-3xl">account_balance_wallet</span>
+<div class="flex items-center gap-3 min-w-[158px] rounded p-2 border border-border-color bg-surface">
+<span class="material-symbols-outlined text-accent-yellow text-3xl">savings</span>
 <div>
-<p class="text-gray-600 dark:text-gray-400 text-xs font-medium">Budget</p>
-<p class="text-gray-900 dark:text-white tracking-light text-xl font-bold leading-tight">€ 50,000</p>
+<p class="text-text-secondary text-xs font-medium uppercase tracking-wider">Budget</p>
+<p class="text-text-primary text-xl font-bold leading-tight">€ 50,000</p>
 </div>
 </div>
-<div class="flex items-center gap-3 min-w-[158px] rounded-lg p-3 border border-gray-200 dark:border-gray-800">
-<span class="material-symbols-outlined text-primary text-3xl">model_training</span>
+<div class="flex items-center gap-3 min-w-[158px] rounded p-2 border border-border-color bg-surface">
+<span class="material-symbols-outlined text-accent-green text-3xl">model_training</span>
 <div>
-<p class="text-gray-600 dark:text-gray-400 text-xs font-medium">Autonomie Numérique</p>
-<p class="text-gray-900 dark:text-white tracking-light text-xl font-bold leading-tight">15%</p>
+<p class="text-text-secondary text-xs font-medium uppercase tracking-wider">Autonomie Num.</p>
+<p class="text-text-primary text-xl font-bold leading-tight">15%</p>
 </div>
 </div>
-<div class="flex items-center gap-3 min-w-[158px] rounded-lg p-3 border border-gray-200 dark:border-gray-800">
-<span class="material-symbols-outlined text-primary text-3xl">eco</span>
+<div class="flex items-center gap-3 min-w-[158px] rounded p-2 border border-border-color bg-surface">
+<span class="material-symbols-outlined text-accent-red text-3xl">eco</span>
 <div>
-<p class="text-gray-600 dark:text-gray-400 text-xs font-medium">Score Écologique</p>
-<p class="text-gray-900 dark:text-white tracking-light text-xl font-bold leading-tight">C+ | 65/100</p>
+<p class="text-text-secondary text-xs font-medium uppercase tracking-wider">Score Éco</p>
+<p class="text-text-primary text-xl font-bold leading-tight">C+ | 65/100</p>
 </div>
 </div>
 </div>
-<!-- ToolBar -->
 <div class="flex items-center gap-4">
 <div class="text-right">
-<p class="text-gray-900 dark:text-white font-semibold">Année 1 - Septembre</p>
+<p class="text-text-primary font-semibold">T0: Année 1 - Décembre</p>
 </div>
-<div class="flex items-center gap-2 bg-gray-100 dark:bg-gray-800 rounded-lg p-1">
-<button class="p-2 text-gray-800 dark:text-gray-200 rounded-md hover:bg-gray-200 dark:hover:bg-gray-700">
+<div class="flex items-center gap-1 bg-background-dark rounded border border-border-color p-1">
+<button class="p-2 text-text-secondary hover:bg-surface hover:text-text-primary rounded">
 <span class="material-symbols-outlined">play_arrow</span>
 </button>
-<button class="p-2 text-gray-800 dark:text-gray-200 rounded-md hover:bg-gray-200 dark:hover:bg-gray-700">
+<button class="p-2 text-text-secondary hover:bg-surface hover:text-text-primary rounded">
 <span class="material-symbols-outlined">pause</span>
 </button>
-<button class="p-2 text-gray-800 dark:text-gray-200 rounded-md hover:bg-gray-200 dark:hover:bg-gray-700">
+<button class="p-2 text-text-secondary hover:bg-surface hover:text-text-primary rounded">
 <span class="material-symbols-outlined">fast_forward</span>
 </button>
 </div>
 </div>
 </header>
-<!-- Event Area -->
 <div class="flex-1 overflow-y-auto p-8 flex flex-col items-center justify-center">
-<div class="w-full max-w-4xl bg-white dark:bg-[#152e19] rounded-xl shadow-lg border border-gray-200 dark:border-gray-800">
-<!-- HeadlineText -->
-<h1 class="text-gray-900 dark:text-white tracking-light text-2xl font-bold leading-tight px-8 text-left pb-2 pt-6">Plan d'équipement numérique de début d'année</h1>
-<!-- BodyText -->
-<p class="text-gray-600 dark:text-gray-300 text-base font-normal leading-normal pb-6 pt-1 px-8">Les professeurs demandent de nouveaux ordinateurs pour la rentrée. Plusieurs options s'offrent à vous, chacune avec des conséquences importantes sur votre budget, votre indépendance technologique et votre impact environnemental.</p>
-<!-- Choice Options -->
+<div class="w-full max-w-4xl bg-surface/80 backdrop-blur-md rounded border border-accent-red/50 shadow-lg relative scanlines">
+<h1 class="text-accent-red glitch-text tracking-widest text-2xl font-bold leading-tight px-8 text-left pb-2 pt-6 uppercase">ALERTE SYSTÈME : Requête Matérielle</h1>
+<p class="text-text-secondary text-base font-normal leading-normal pb-6 pt-1 px-8">Anomalie détectée: Demande de renouvellement matériel par le personnel. Les systèmes actuels approchent de l'obsolescence programmée. Analyser les options pour maintenir l'opérabilité.</p>
 <div class="p-8 pt-0 grid grid-cols-1 md:grid-cols-3 gap-6">
-<!-- Option 1 -->
-<div class="flex flex-col border border-gray-200 dark:border-gray-700 rounded-lg p-4 bg-gray-50 dark:bg-gray-800/50 hover:border-primary/50 dark:hover:border-primary/50 transition-all">
-<h3 class="font-bold text-gray-900 dark:text-white">Partenariat GAFAM</h3>
-<p class="text-sm text-gray-500 dark:text-gray-400 mt-1 mb-3 flex-grow">Coût faible, autonomie faible, impact écologique négatif. Une solution rapide mais qui augmente votre dépendance.</p>
-<button class="w-full bg-primary/20 text-primary-800 dark:text-primary font-semibold py-2 px-4 rounded-lg hover:bg-primary/30 transition-colors">
-                                Choisir
+<div class="flex flex-col border border-accent-red/50 rounded p-4 bg-accent-red/10 hover:bg-accent-red/20 transition-all">
+<h3 class="font-bold text-accent-red uppercase tracking-wider">Protocole GAFAM</h3>
+<p class="text-sm text-text-secondary mt-1 mb-3 flex-grow">// Faible coût initial. // Dépendance accrue. // Impact écologique critique.</p>
+<button class="w-full bg-primary text-white font-semibold py-2 px-4 rounded hover:bg-red-700 transition-colors border border-red-400">
+                                Exécuter
                             </button>
 </div>
-<!-- Option 2 -->
-<div class="flex flex-col border border-gray-200 dark:border-gray-700 rounded-lg p-4 bg-gray-50 dark:bg-gray-800/50 hover:border-primary/50 dark:hover:border-primary/50 transition-all">
-<h3 class="font-bold text-gray-900 dark:text-white">Achat Reconditionné</h3>
-<p class="text-sm text-gray-500 dark:text-gray-400 mt-1 mb-3 flex-grow">Coût moyen, autonomie moyenne, impact écologique positif. Un compromis équilibré pour commencer.</p>
-<button class="w-full bg-primary/20 text-primary-800 dark:text-primary font-semibold py-2 px-4 rounded-lg hover:bg-primary/30 transition-colors">
-                                Choisir
+<div class="flex flex-col border border-accent-green/50 rounded p-4 bg-accent-green/10 hover:bg-accent-green/20 transition-all">
+<h3 class="font-bold text-accent-green uppercase tracking-wider">Procédure Reconditionnée</h3>
+<p class="text-sm text-text-secondary mt-1 mb-3 flex-grow">// Coût modéré. // Autonomie partielle. // Impact écologique positif.</p>
+<button class="w-full bg-secondary text-white font-semibold py-2 px-4 rounded hover:bg-green-700 transition-colors border border-green-400">
+                                Exécuter
                             </button>
 </div>
-<!-- Option 3 -->
-<div class="flex flex-col border border-gray-200 dark:border-gray-700 rounded-lg p-4 bg-gray-50 dark:bg-gray-800/50 hover:border-primary/50 dark:hover:border-primary/50 transition-all">
-<h3 class="font-bold text-gray-900 dark:text-white">Solution Open Source</h3>
-<p class="text-sm text-gray-500 dark:text-gray-400 mt-1 mb-3 flex-grow">Coût élevé, autonomie forte, impact écologique neutre. Un investissement pour l'avenir et l'indépendance.</p>
-<button class="w-full bg-primary/20 text-primary-800 dark:text-primary font-semibold py-2 px-4 rounded-lg hover:bg-primary/30 transition-colors">
-                                Choisir
+<div class="flex flex-col border border-accent-yellow/50 rounded p-4 bg-accent-yellow/10 hover:bg-accent-yellow/20 transition-all">
+<h3 class="font-bold text-accent-yellow uppercase tracking-wider">Initiative Open Source</h3>
+<p class="text-sm text-text-secondary mt-1 mb-3 flex-grow">// Coût élevé. // Autonomie maximale. // Impact écologique neutre.</p>
+<button class="w-full bg-warning text-black font-semibold py-2 px-4 rounded hover:bg-yellow-600 transition-colors border border-yellow-400">
+                                Exécuter
                             </button>
 </div>
 </div>
