--- a/klub.html
+++ b/klub.html
@@ -346,6 +346,11 @@
                     <span class="text-sm font-medium">KLUB</span>
                 </a>
 
+                <a href="snake.html" class="navbar-link text-text-light hover:text-neon-green flex items-center gap-2 py-2">
+                    <span class="material-symbols-outlined text-lg">sports_esports</span>
+                    <span class="text-sm font-medium">Snake</span>
+                </a>
+
                 <div class="h-6 w-px bg-terminal-border"></div>
 
                 <!-- INFOS STATUS -->
@@ -381,6 +386,11 @@
             <a href="klub.html" class="navbar-link active text-text-light hover:text-neon-green hover:bg-terminal-border flex items-center gap-3 p-3 rounded transition-all">
                 <span class="material-symbols-outlined">celebration</span>
                 <span class="font-medium">KLUB</span>
+            </a>
+
+            <a href="snake.html" class="navbar-link text-text-light hover:text-neon-green flex items-center gap-2 py-2">
+                    <span class="material-symbols-outlined text-lg">sports_esports</span>
+                    <span class="text-sm font-medium">Snake</span>
             </a>
 
             <div class="h-px bg-terminal-border my-2"></div>
